--- a/BSCS22108_As_01.html
+++ b/BSCS22108_As_01.html
@@ -281,7 +281,7 @@
         <p>I am a highly motivated individual with expertise in <em>technology, problem-solving, and teamwork</em>.<br>
              Below, you'll find more information about my skills, projects, certifications, and education.</p>
         <video width="320" height="240" controls>
-            <source src="your-video.mp4" type="video/mp4">
+            <source src="https://cdn.pixabay.com/video/2024/05/05/210707_tiny.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </section>
