--- a/BSCS22108_As_01.html
+++ b/BSCS22108_As_01.html
@@ -366,7 +366,8 @@
         <h2>Contact</h2>
         <p>Email: <a href="mailto:khuzaimaiqbal91@gmail.com">khuzaimaiqbal91@gmail.com</a></p>
     </section>
-    
+    <div></div>
+
 
 </body>
 </html> 
