script tag for javaScript

--- a/BSCS22108_As_01.html
+++ b/BSCS22108_As_01.html
@@ -367,7 +367,13 @@
         <h2>Contact</h2>
         <p>Email: <a href="mailto:khuzaimaiqbal91@gmail.com">khuzaimaiqbal91@gmail.com</a></p>
     </section>
-<!-- comment -->
+
+    <!-- JavaScript Code -->
+    <script>
+    // all JavaScript code will be written here
+    
+    </script>
+
 
 
 </body>
