About me and skills in object

--- a/BSCS22108_As_01.html
+++ b/BSCS22108_As_01.html
@@ -371,7 +371,18 @@
     <!-- JavaScript Code -->
     <script>
     // all JavaScript code will be written here
-    
+
+    //About me and skills
+    const profileData = {
+    name: "Muhammad Khuzaima",
+    about: "I am a highly motivated individual with expertise in technology, problem-solving, and teamwork.",
+    videoSrc: "https://cdn.pixabay.com/video/2024/05/05/210707_tiny.mp4",
+    skills: {
+        softSkills: ["Teamwork", "Problem Solving", "Communication", "Leadership"],
+        hardSkills: ["Database Management (MySQL)", "Socket Programming (C, C++)", "Assembly Language"]
+    }
+   };
+
     </script>
 
 
