Project,Award,Education and contact in object

--- a/BSCS22108_As_01.html
+++ b/BSCS22108_As_01.html
@@ -380,7 +380,34 @@
     skills: {
         softSkills: ["Teamwork", "Problem Solving", "Communication", "Leadership"],
         hardSkills: ["Database Management (MySQL)", "Socket Programming (C, C++)", "Assembly Language"]
+    },
+    projects: [
+        {
+            name: "Client-Server Application",
+            description: "Developed a socket-based client-server application with file upload, download, and authentication functionalities."
+        },
+        {
+            name: "Chess game",
+            description: "Created a Chess game in C++ with the option to play with computer as well as with another person."
+        }
+    ],
+    awards: [
+        "Codefest 5.0 participation certificate",
+        "IEEE seminar attendance certificate"
+    ],
+    education: {
+        degrees: [
+            "Matriculation in Science from DPS Faisalabad",
+            "ICS from Punjab College Faisalabad",
+            "Bachelor's in Computer Science from ITU Lahore"
+        ],
+        shortCourses: ["Microsoft Office", "Freelancing Course"]
+    },
+    contact: {
+        email: "khuzaimaiqbal91@gmail.com"
     }
+
+
    };
 
     </script>
