--- a/BSCS22108_As_01.html
+++ b/BSCS22108_As_01.html
@@ -267,48 +267,28 @@
         </ul>
 
         <!-- Language Selector -->
-        <select id="languageSelect" onchange="changeLanguage()">
+        <select id="languageSelect">
             <option value="en">English</option>
             <option value="ar">Arabic</option>
             <option value="ur">Urdu</option>
             <option value="fr">French</option>
         </select>
     </nav>
+<!-- About Me Section -->
+<section id="about">
+    <h1 id="name"></h1>
+    <p id="description"></p>
+    <video width="320" height="240" controls>
+        <source src="https://cdn.pixabay.com/video/2024/05/05/210707_tiny.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</section>
 
-    <!-- About Me Section -->
-    <section id="about">
-        <h1>Muhammad Khuzaima</h1>
-        <p>I am a highly motivated individual with expertise in <em>technology, problem-solving, and teamwork</em>.<br>
-             Below, you'll find more information about my skills, projects, certifications, and education.</p>
-        <video width="320" height="240" controls>
-            <source src="https://cdn.pixabay.com/video/2024/05/05/210707_tiny.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </section>
-
-    <!-- Skills Section -->
-    <section id="skills">
-        <h2>Skills</h2>
-        <div class="skills-container">
-            <div>
-                <h3>Soft Skills</h3>
-                <ul>
-                    <li>Teamwork</li>
-                    <li>Problem Solving</li>
-                    <li>Communication</li>
-                    <li>Leadership</li>
-                </ul>
-            </div>
-            <div>
-                <h3>Hard Skills</h3>
-                <ul>
-                    <li>Database Management (MySQL)</li>
-                    <li>Socket Programming (C, C++)</li>
-                    <li>Assembly Language</li>
-                </ul>
-            </div>
-        </div>
-    </section>
+<!-- Skills Section -->
+<section id="skills">
+    <h2>Skills</h2>
+    <div class="skills-container" id="skillsList"></div>
+</section>
 
     <!-- Projects Section -->
     <section id="projects">
