Populating project,award and education section with id'

--- a/BSCS22108_As_01.html
+++ b/BSCS22108_As_01.html
@@ -293,42 +293,24 @@
     <!-- Projects Section -->
     <section id="projects">
         <h2>Projects</h2>
-        <ul>
-            <li>
-                <strong>Client-Server Application</strong> 
-                <p>Developed a socket-based client-server application with file upload, download, and authentication functionalities.</p>
-            </li>
-            <li>
-                <strong>Chess game</strong> 
-                <p>Created a Chess game in C++ with the option to play with computer as well as with another person.</p>
-            </li>
-        </ul>
+        <ul id="projectsList"></ul>
     </section>
 
     <!-- Awards, Certifications & Trainings Section -->
     <section id="awards">
         <h2>Awards, Certifications & Trainings</h2>
-        <ul>
-            <li>Codefest 5.0 participation certificate</li>
-            <li>IEEE seminar attendence certificate</li>
-        </ul>
+        <ul id="awardsList"></ul>
     </section>
 
     <!-- Education Section -->
     <section id="education">
         <h2>Education</h2>
-        
         <h3>Degrees</h3>
-        <p>  Done Matriculation in Science from DPS Faisalabad<br>
-            Done ICS from Punjab College Faisalabad<br>
-            Currently doing bachelor's in Computer Science from ITU Lahore</p>
-
+        <p id="degrees"></p>
         <h3>Short Courses</h3>
-        <ul>
-            <li>Microsoft Office</li>
-            <li>Freelancing Course</li>
-        </ul>
+        <ul id="shortCoursesList"></ul>
     </section>
+
 
     <!-- Social Media Feed -->
 
