--- a/BSCS22108_As_01.html
+++ b/BSCS22108_As_01.html
@@ -312,23 +312,18 @@
     </section>
 
 
-    <!-- Social Media Feed -->
+  <!-- Social Media Feed -->
+  <section id="social">
+    <h2>Social Media Feed</h2>
+    <p>Follow me on social media for updates on my latest projects and achievements:</p>
+    <ul id="socialList"></ul>
+</section>
 
-    <section id="social">
-        <h2>Social Media Feed</h2>
-        <p>Follow me on social media for updates on my latest projects and achievements:</p>
-        <ul>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">Github</a></li>
-        </ul>
-    </section>
-    
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:khuzaimaiqbal91@gmail.com">khuzaimaiqbal91@gmail.com</a></p>
-    </section>
+<!-- Contact Section -->
+<section id="contact">
+    <h2>Contact</h2>
+    <p>If you wish to reach out, feel free to contact me at <a href="mailto:your_email@example.com">your_email@example.com</a>.</p>
+</section>
 
     <!-- JavaScript Code -->
     <script>
