Social media addition with relevant links

--- a/BSCS22108_As_01.html
+++ b/BSCS22108_As_01.html
@@ -444,5 +444,18 @@
 
         window.onload = Data_populate;
     </script>
+     <!-- Social Media Section -->
+     <section id="social">
+        <h2>Social Media</h2>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/muhammad-khuzaima-212511266/">LinkedIn</a></li>
+            <li><a href="https://github.com/KhuzaimaIqbal123">GitHub</a></li>
+            <li><a href="https://www.instagram.com/?next=%2F">Instagram</a></li>
+
+        </ul>
+    </section>
+
+
+
 </body>
 </html>
